Diseño Desktop LandPage finalizado

--- a/src/input.css
+++ b/src/input.css
@@ -18,7 +18,7 @@
 }
 
 .nav-item {
-    padding: 2px;
+    padding: 3px;
     font-family: Lato;
     transition: background-color 0.5s;
 }
@@ -26,14 +26,14 @@
 .nav-item:hover {
     background-color: #91E35B;
     color: #F8FDF5;
-    @apply rounded-sm;
+    @apply rounded-md;
 }
 
 .btn {
     padding: 4px;
     background-color: #E36F44;
     color: #F8FDF5;
-    @apply rounded-sm my-2;
+    @apply rounded-md my-2;
     position: absolute;
     font-family: Capriola;
     font-size: 20px;
@@ -48,7 +48,7 @@
     padding: 4px;
     background-color: #91E35B;
     color: #91E35B;
-    @apply rounded-sm my-2;
+    @apply rounded-md my-2;
     position: absolute;
     font-family: Capriola;
     font-size: 20px;
@@ -62,10 +62,33 @@ h1 {
     font-family: Zilla-Slab;
 }
 
+h2 {
+    font-family: Zilla-Slab;
+}
+
 p {
     font-family: Lato;
 }
 
 .separador {
     border-color: #8D99AE;
+}
+
+.menu-responsive {
+    background-color: #E36F44;
+    @apply p-1 mb-4;
+    border-radius: 50%;
+}
+
+.menu-responsive:hover {
+    cursor: pointer;
+}
+
+.link:hover {
+    color: #E36F44;
+    cursor: pointer;
+}
+
+.img-landPage {
+    transform: scale(0.75);
 }
