--- a/src/input.css
+++ b/src/input.css
@@ -72,6 +72,11 @@ h2 {
     font-family: Zilla-Slab;
 }
 
+h3 {
+    font-family: Zilla-Slab;
+    color: #5B9D2F;
+}
+
 p {
     font-family: Lato;
 }
@@ -94,4 +99,24 @@ p {
 
 .img-landPage {
     transform: scale(0.75);
+}
+
+#rectangulo-degradado-fondo {
+    position: relative;
+    height: 300px;
+    background: radial-gradient(41.93% 138.25% at 13.44% 28.94%, #91E35B 0%, #FFFFFF 98.05%);
+    border-radius: 10px;
+}
+
+#img-principal-blog {
+    max-width: 98%;
+    max-height: 98%;
+}
+
+.separador-blog {
+    border-color: #E36F44;
+}
+
+.entrada-blog:hover {
+    color: #E36F44;
 }
