--- a/src/input.css
+++ b/src/input.css
@@ -77,6 +77,15 @@ h3 {
     color: #5B9D2F;
 }
 
+h4 {
+    font-family: Zilla-Slab-Bold;
+}
+
+h5 {
+    font-family: Lato;
+    color: #FFF;
+}
+
 p {
     font-family: Lato;
 }
@@ -124,4 +133,18 @@ p {
 
 .underline {
     text-decoration-color: #E36F44;
+}
+
+footer {
+    background-color: #423C52;
+}
+
+footer * {
+    color: #FFF;
+}
+
+footer hr {
+    @apply mt-12;
+    height: 2px;
+    background-color: #D9D9D9;
 }
